k8s/backend-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: slotlist-backend
  namespace: slotlist
spec:
  minReadySeconds: 20
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  replicas: 2
  template:
    metadata:
      labels:
        app: slotlist-backend
    spec:
      containers:
        - name: slotlist-backend
          image: eu.gcr.io/slotlist-info/slotlist/backend:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 100m
              memory: 500Mi
            requests:
              cpu: 30m
              memory: 250Mi
          ports:
            - containerPort: 3000
