k8s/pghero-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pghero
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pghero
    spec:
      containers:
        - name: pghero
          image: ankane/pghero
          ports:
            - containerPort: 8080
              name: pghero
