k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slotlist-backend
  namespace: slotlist
  labels:
    app: slotlist-backend
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 3000
      port: 3000
  selector:
    app: slotlist-backend
