k8s/pghero-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pghero
  namespace: kube-system
  labels:
    app: pghero
spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: pghero
      targetPort: 8080
      port: 8008
  selector:
    app: pghero
