k8s/backend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: slotlist-backend
  namespace: slotlist
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: api-staging.slotlist.info
      http:
        paths:
          - path: /
            backend:
              serviceName: slotlist-backend
              servicePort: http
